--- a/backend-node/package.json
+++ b/backend-node/package.json
@@ -20,7 +20,8 @@
         "@supabase/supabase-js": "^2.39.0",
         "dotenv": "^16.3.1",
         "bcryptjs": "^2.4.3",
-        "jsonwebtoken": "^9.0.2"
+        "jsonwebtoken": "^9.0.2",
+        "cors": "^2.8.5"
     },
     "devDependencies": {
         "nodemon": "^3.0.2"
